@@ -41,6 +41,8 @@ src/plugins/totem-plugins-engine.c
 src/plugins/bemused/totem-bemused.c
 src/plugins/brasero-disc-recorder/totem-disc-recorder.c
 [type: gettext/ini]src/plugins/brasero-disc-recorder/brasero-disc-recorder.totem-plugin.in
+src/plugins/coherence_upnp/coherence_upnp.py
+[type: gettext/ini]src/plugins/coherence_upnp/coherence_upnp.totem-plugin.in
 [type: gettext/ini]src/plugins/galago/galago.totem-plugin.in
 src/plugins/galago/totem-galago.c
 [type: gettext/ini]src/plugins/gromit/gromit.totem-plugin.in
