@@ -1,0 +1,9 @@
+[Totem Plugin]
+Loader=python
+Module=coherence_upnp
+IAge=1
+_Name=Coherence DLNA/UPnP Client
+_Description=A DLNA/UPnP client for Totem powered by Coherence
+Authors=Frank Scholz <coherence@beebits.net>
+Copyright=Copyright © 2008 Frank Scholz
+Website=http://coherence.beebits.net/
