@@ -1,3 +1,7 @@
+2009-01-20  Bastien Nocera  <hadess@hadess.net>
+
+	* POTFILES.in: Add Coherence UPNP plugin
+
 2009-01-19  Runa Bhattacharjee  <runab@redhat.com>
 
 	* bn_IN.po: Error corrections and translations updation
