@@ -1,3 +1,11 @@
+2009-01-20  Bastien Nocera  <hadess@hadess.net>
+
+	* configure.in:
+	* src/plugins/coherence_upnp/Makefile.am:
+	* src/plugins/coherence_upnp/coherence_upnp.py:
+	* src/plugins/coherence_upnp/coherence_upnp.totem-plugin.in:
+	Add Coherence UPNP plugin from Frank Scholz
+
 2009-01-18  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-menu.c (on_recent_file_item_activated):
